# kndl-synth

./: .gitignore  CMakeLists.txt  README.md  build.sh
dsp/: KndlSynth.cpp  KndlSynth.h
dsp/core/: ModulationMatrix.h  Parameters.h  Voice.cpp  Voice.h  VoiceManager.h
dsp/effects/: Chorus.h  DCBlocker.h  Delay.h  Distortion.h  Effect.h  OTT.h  Reverb.h  SafetyLimiter.h  Wavefolder.h
dsp/filters/: AdvancedFilters.h  Filter.h  SVFFilter.h
dsp/modulators/: Envelope.h  LFO.h  Orbit.h  Spellbook.h
dsp/oscillators/: BasicOscillator.h  NoiseGenerator.h  Oscillator.h  SubOscillator.h
dsp/sequencer/: InternalSequencer.h
plugin/: Logger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
resources/presets/: 303 Acid Line.kndl  303 Square Acid.kndl  Acid Lead.kndl  Arrakis Wind.kndl  Bene Gesserit.kndl  Comb Pluck.kndl  DX7 Bell.kndl  Dark Atmosphere.kndl  Deep Bass.kndl  Formant Choir.kndl  Fremen Whisper.kndl  Holtzman Shield.kndl  Hypnotic Pad.kndl  Init.kndl  Juno Bass.kndl  Juno Pad.kndl  Lemniscate Keys.kndl  MS-20 Growl.kndl  Metallic Ring.kndl  Minimoog Bass.kndl  Minimoog Lead.kndl  Notch Sweep.kndl  OBX Brass.kndl  OTT Supersaw.kndl  Orbit Pad.kndl  Polysix Sweep.kndl  Prescient Dream.kndl  Prophet Strings.kndl  Psychedelic Drone.kndl  Reese Bass.kndl  SH-101 Seq Lead.kndl  Sandworm Rising.kndl  Sardaukar Chant.kndl  Spellbook Pad.kndl  Spice Vision.kndl  Spiral Texture.kndl  Square Wobble.kndl  Techno Stab.kndl  Thumper Signal.kndl  Voice of the Worm.kndl  (+1 more)
tests/: DSPTests.cpp  TestMain.cpp
ui/components/: KndlEffectSection.h  KndlFilterDisplay.h  KndlKnob.h  KndlModMatrix.h  KndlOscSection.h  KndlPanel.h  KndlPresetSelector.h  KndlScope.h  KndlSlider.h
ui/layout/: Grid.h  LayoutManager.h
ui/skins/: ArrakisTheme.h  FontManager.h  Theme.h
